--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,7 @@
     <main>
       <section>
         <h1 hidden>hidden</h1>
+        <h2 hidden>hidden</h2>
         <ul class="list">
           <li><button type="button" class="btn-portfolio">All</button></li>
           <li><button type="button" class="btn-portfolio">Web Site</button></li>
@@ -70,8 +71,8 @@
                 alt="Banking App Interface Concept"
                 width="360"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="header-portf">Banking App Interface Concept</h2>
+              <p class="text">App</p>
             </a>
           </li>
           <li>
@@ -81,8 +82,8 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="header-portf">Cashless Payment</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
@@ -92,15 +93,15 @@
                 alt="Meditaion App"
                 width="360"
               />
-              <h2>Meditaion App</h2>
-              <p>App</p>
+              <h2 class="header-portf">Meditaion App</h2>
+              <p class="text">App</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/04taxi.jpg" alt="Taxi Service" width="360" />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="header-portf">Taxi Service</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
@@ -110,8 +111,8 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="header-portf">Screen Illustrations</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li>
@@ -121,8 +122,8 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="header-portf">Online Courses</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
@@ -132,8 +133,8 @@
                 alt="Instagram Stories Concept"
                 width="360"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="header-portf">Instagram Stories Concept</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li>
@@ -143,15 +144,15 @@
                 alt="Organic Food"
                 width="360"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="header-portf">Organic Food</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
               <img src="./images/09coffee.jpg" alt="Fresh Coffee" width="360" />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="header-portf">Fresh Coffee</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
         </ul>
