--- a/portfolio.html
+++ b/portfolio.html
@@ -22,28 +22,30 @@
   <body>
     <header>
       <nav class="site-nav">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo link"
           >Web<span class="studio">Studio</span></a
         >
         <ul class="list">
           <li>
-            <a href="./index.html" class="link-nav">Studio</a>
+            <a href="./index.html" class="link-nav link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link-nav current">Portfolio</a>
+            <a href="./portfolio.html" class="link-nav link current"
+              >Portfolio</a
+            >
           </li>
-          <li><a href="" class="link-nav">Contacts</a></li>
+          <li><a href="" class="link-nav link">Contacts</a></li>
         </ul>
       </nav>
       <address class="adrs">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link-adrs"
+            <a href="mailto:info@devstudio.com" class="link-adrs link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link-adrs"
+            <a href="tel:+110001111111" class="link-adrs link"
               >+11 (000) 111-11-11</a
             >
           </li>
