--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
           </li>
           <li>
             <h3 class="header-three">Punctuality</h3>
-            <p>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="header-three">Diligence</h3>
-            <p>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="header-three">Technologies</h3>
-            <p>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -114,10 +114,10 @@
         </ul>
       </section>
       <!-- our team -->
-      <section>
+      <section class="team">
         <h2 class="header-two">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="list-point">
             <img
               src="./images/mark(1).jpg"
               alt="mark"
@@ -162,7 +162,7 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo link"
         >Web<span class="studio-footer">Studio</span></a
       >
       <p class="text-footer">
