--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               height="260"
             />
             <h3 class="header-three">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img
@@ -135,7 +135,7 @@
               height="260"
             />
             <h3 class="header-three">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -145,7 +145,7 @@
               height="260"
             />
             <h3 class="header-three">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -155,13 +155,13 @@
               height="260"
             />
             <h3 class="header-three">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
-    <footer>
+    <footer class="foot">
       <a href="./index.html" class="logo link"
         >Web<span class="studio-footer">Studio</span></a
       >
