--- a/portfolio.html
+++ b/portfolio.html
@@ -160,8 +160,8 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" class="logo"
+    <footer class="foot">
+      <a href="./index.html" class="logo link"
         >Web<span class="studio-footer">Studio</span></a
       >
       <p class="text-footer">
