--- a/portfolio.html
+++ b/portfolio.html
@@ -56,12 +56,12 @@
       <section>
         <h1 hidden>hidden</h1>
         <ul class="list">
-          <li><button type="button" class="btn-portfolio">All</button></li>
-          <li><button type="button" class="btn-portfolio">Web Site</button></li>
-          <li><button type="button" class="btn-portfolio">App</button></li>
-          <li><button type="button" class="btn-portfolio">Design</button></li>
+          <li><button class="btn-portfolio" type="button">All</button></li>
+          <li><button class="btn-portfolio" type="button">Web Site</button></li>
+          <li><button class="btn-portfolio" type="button">App</button></li>
+          <li><button class="btn-portfolio" type="button">Design</button></li>
           <li>
-            <button type="button" class="btn-portfolio">Marketing</button>
+            <button class="btn-portfolio" type="button">Marketing</button>
           </li>
         </ul>
         <ul class="list">
