--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
         <ul class="list">
           <li>
-            <a href="./index.html" class="link-nav link current">Studio</a>
+            <a href="./index.html" class="link-nav link">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="link-nav link">Portfolio</a>
@@ -127,7 +127,7 @@
             <h3 class="header-three">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="list-point">
             <img
               src="./images/tomford(1).jpg"
               alt="tom"
@@ -137,7 +137,7 @@
             <h3 class="header-three">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-point">
             <img
               src="./images/camila(1).jpg"
               alt="camila"
@@ -147,7 +147,7 @@
             <h3 class="header-three">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="list-point">
             <img
               src="./images/daniel(1).jpg"
               alt="daniel"
