--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,7 @@
             <a href="./index.html" class="link-nav link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link-nav link current"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="link-nav link">Portfolio</a>
           </li>
           <li><a href="" class="link-nav link">Contacts</a></li>
         </ul>
@@ -94,7 +92,7 @@
                 alt="Meditaion App"
                 width="360"
               />
-              <h2 class="header-portf">Meditaion App</h2>
+              <h2 class="header-portf">Meditation App</h2>
               <p class="text">App</p>
             </a>
           </li>
