--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <button type="button" class="btn">Order Service</button>
       </section>
       <!-- H2 -->
-      <section class="advantages">
-        <h2 hidden>No content</h2>
+      <section>
+        <h2 class="advantages" hidden>No content</h2>
         <ul class="list">
           <li>
             <h3 class="header-three">Strategy</h3>
